# sigrok_frontend

./: .gitignore  CMakeLists.txt  apk.sh  aquisition.ui  aquisitionmodel.cpp  aquisitionmodel.h  columnserializationadapter.cpp  columnserializationadapter.h  configdialog.h  devicemodel.cpp  devicemodel.h  generalconfig.ui  geticons.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodeadapter.cpp  nodeadapter.h  printandroidbt.sh  proxynodefactory.cpp  proxynodefactory.h  range.cpp  ratesink.cpp  ratesink.h  remotemanager.cpp  remotemanager.h  rowsubset.h  session.cpp  session.h  source.sh  tutorial4ui.rc  upload.sh
android/: AndroidManifest.xml
cmake/: FindQwt.cmake  extrawarnings.cmake
common/: CMakeLists.txt  abstractnode.cpp  abstractnode.h  abstractsession.cpp  abstractsession.h  actioncollection.cpp  actioncollection.h  interfaceserializer.cpp  interfaceserializer.h  pagemanager.cpp  pagemanager.h  remotemanager.cpp  remotemanager.h  selectedactioncollection.cpp  selectedactioncollection.h  ssdp.cpp  ssdp.h  widgetgroupmodel.cpp  widgetgroupmodel.h
common/repc/: autorange.rep  device.rep  pages.rep  remotewidgets.rep
data/: tutorial4Settings.kcfg  tutorial4Settings.kcfgc
delegates/: CMakeLists.txt  autocompletiondelegate.cpp  autocompletiondelegate.h  categorizeddelegate.cpp  categorizeddelegate.h  colordelegate.cpp  colordelegate.h
desktop/: CMakeLists.txt  configdialog.cpp  desktop.qrc  docktitle.cpp  docktitle.h  docktitle.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  toolbox.cpp  toolbox.h  toolbox.ui  tutorial4ui.rc
kf5/: build.sh
mobile/: CMakeLists.txt  appbar.ui  default.css  docktilebar.css  edit.css  mainwindow.cpp  mainwindow.h  mainwindow.ui  mobile.qrc  titlebar.ui
mobile/icons/: icons.qrc  index.theme
mobile/qml/: controls.qml  leftpane.qml  tableview.qml
models/: remotewidgets.cpp  remotewidgets.h
nodes/: CMakeLists.txt  abstractnode.cpp  abstractnode.h  aquisitionnode.cpp  aquisitionnode.h  autorangenode.cpp  autorangenode.h  chartnode.cpp  chartnode.h  chrononode.cpp  chrononode.h  colornode.cpp  colornode.h  columnnode.cpp  columnnode.h  currentvalues.cpp  currentvalues.h  curvechartnode.cpp  curvechartnode.h  deduplicatenode.cpp  deduplicatenode.h  devicelistnode.cpp  devicelistnode.h  devicenode.cpp  devicenode.h  headnode.cpp  headnode.h  lcdmeternode.cpp  lcdmeternode.h  liveacquisitionnode.cpp  liveacquisitionnode.h  manualacquisitionnode.cpp  manualacquisitionnode.h  manualaquisitionnode.cpp  manualaquisitionnode.h  mementonode.cpp  mementonode.h  meternode.cpp  meternode.h  monitornode.cpp  (+23 more)
nodes/remote/: remotecontrols.cpp  remotecontrols.h  remotemeter.cpp  remotemeter.h  remotetable.cpp  remotetable.h  template.cpp  template.h
proxies/: CMakeLists.txt  README.md  chronometerproxy.cpp  chronometerproxy.h  coloredrangeproxy.cpp  coloredrangeproxy.h  columnproxy.cpp  columnproxy.h  deduplicateproxy.cpp  deduplicateproxy.h  filtertoplevelproxy.cpp  filtertoplevelproxy.h  headproxy.cpp  headproxy.h  lastrowtolistproxy.cpp  lastrowtolistproxy.h  mementoproxy.cpp  mementoproxy.h  meterproxy.cpp  meterproxy.h  rangeproxy.cpp  rangeproxy.h  rangeproxy_p.h  rowsdeletionproxy.cpp  rowsdeletionproxy.h  tailproxy.cpp  tailproxy.h  vectorizingproxy.cpp  vectorizingproxy.h  xmlschemabuildermodel.cpp  xmlschemabuildermodel.h
qt5-node-editor/src/: graphicsbezieredge.cpp  graphicsbezieredge.hpp  graphicsbezieredge_p.h  graphicsnode.cpp  graphicsnode.hpp  graphicsnodesocket.cpp  graphicsnodesocket.hpp  graphicsnodesocket_p.h  graphicsnodeview.cpp  graphicsnodeview.hpp  qmodeldatalistdecoder.cpp  qmultimodeltree.cpp  qnodeeditorsocketmodel.cpp  qnodeeditorsocketmodel.h  qnodeview.cpp  qnodeview.h  qnodewidget.cpp  qnodewidget.h  qobjectmodel.cpp  qobjectmodel.h  qobjectnode.cpp  qobjectnode.hpp  qreactiveproxymodel.cpp
repc/: meterdata.rep
sigrokd/: CMakeLists.txt  acquisitionmodel.cpp  acquisitionmodel.h  aquisitionmodel.cpp  aquisitionmodel.h  devicemodel.cpp  devicemodel.h  sigrokdevice.cpp  sigrokdevice.h
widgets/: CMakeLists.txt  acquisition.cpp  acquisition.h  acquisition.ui  aquisition.cpp  aquisition.h  aquisition.ui  categorizedtree.cpp  categorizedtree.h  charttype.cpp  charttype.h  charttype.ui  chrono.cpp  chrono.h  chrono.ui  colorizer.ui  column.cpp  column.h  column.ui  controls.cpp  controls.h  controls.ui  controlschooser.cpp  controlschooser.h  controlschooser.ui  current.cpp  current.h  current.ui  curvechart.cpp  curvechart.h  deduplicate.cpp  deduplicate.h  deduplicate.ui  devicelist.cpp  devicelist.h  devicelist.ui  lcdmeter.cpp  lcdmeter.h  lcdmeter.ui  memento.cpp  (+41 more)
